lab hypothesis done

--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -45,13 +45,12 @@
     "#libraries\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
-    "import numpy as np\n",
-    "\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +277,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +296,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 70\n",
+      "t-statistics =71.98729726370772\n",
+      "p-Value = 5.811655800408349e-88\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "\n",
+    "#use two sample test\n",
+    "\n",
+    "hp_dragon = df[df['Type 1']=='Dragon']['HP']\n",
+    "hp_grass = df[df['Type 1']=='Grass']['HP']\n",
+    "\n",
+    "#hypothesis\n",
+    "#H0: dragon_stats > grass_stats\n",
+    "#H1: dragon_stats < grass_stats\n",
+    "#5% significance\n",
+    "alpha = 0.05\n",
+    "\n",
+    "#st.ttest_ind(hp_dragon, hp_grass, )\n",
+    "\n",
+    "#sample averagedr\n",
+    "dragon_stats = hp_dragon.mean()\n",
+    "grass_stats = hp_grass.mean()\n",
+    "\n",
+    "#sample size\n",
+    "n1 = len(hp_dragon)\n",
+    "n2 = len(hp_grass)\n",
+    "print(n1,n2)\n",
+    "\n",
+    "x=np.random.randn(n1)+dragon_stats\n",
+    "y=np.random.randn(n2)+grass_stats\n",
+    "\n",
+    "t_stat, p_val = st.ttest_ind(x,y)\n",
+    "print(f\"t-statistics ={t_stat}\")\n",
+    "print(f\"p-Value = {p_val}\")\n",
+    "\n",
+    "print(\"As regarding the P-value the lower value rejects the null hyphotises and the high t-statistics confirms that the Dragon hp Stats is greater then Grass HP stats\")\n"
    ]
   },
   {
@@ -313,11 +353,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speed - t_stat: 11.48, p_value:0.0000\n",
+      "Attack - t_stat: 10.44, p_value:0.0000\n",
+      "HP - t_stat: 8.98, p_value:0.0000\n",
+      "Sp. Atk - t_stat: 13.42, p_value:0.0000\n",
+      "Defense - t_stat: 7.64, p_value:0.0000\n",
+      "Sp. Def - t_stat: 10.02, p_value:0.0000\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#i used the Independent sample t-test, to compare the stats between legendary and non-legendary Pokemons, that is appropriate for comparing the means of two independent groups.\n",
+    "# df[df['Legendary']=='True']['Attack']\n",
+    "\n",
+    "#H0: Null hypothesis: there is no difference in the mean stats between legendary and non-legendary pokemon;\n",
+    "#H1: Alternative hypothesis: there is a difference in the mean stats between legenday and non-legendary pokemon;\n",
+    "\n",
+    "#significance level: 5%\n",
+    "\n",
+    "legendary_stats = df[df['Legendary'] == 1]\n",
+    "non_legendary_stats = df[df['Legendary'] == 0]\n",
+    "\n",
+    "stats_cols = {'HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed'}\n",
+    "\n",
+    "results={}\n",
+    "for stat in stats_cols:\n",
+    "    t_stat, p_val = st.ttest_ind(legendary_stats[stat], non_legendary_stats[stat], equal_var=False)\n",
+    "    results[stat] = {'t_stat': t_stat, 'p_val': p_val}\n",
+    "\n",
+    "for stat, result in results.items():\n",
+    "    print(f\"{stat} - t_stat: {result['t_stat']:.2f}, p_value:{result['p_val']:.4f}\")\n",
+    "\n",
+    "\n",
+    "#H0: Reject the null hypothesis"
    ]
   },
   {
@@ -337,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +528,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
